2007-02-10  Matt Rice <ratmice@gmail.com>

	* gnustep-config.sh.in: exit early for --help.

2007-02-11  Nicola Pero  <nicola.pero@meta-innovation.com>,
            Matt Rice  <ratmice@gmail.com>

	* gnustep-config.sh.in: New file.
	* configure.ac: Added gnustep-config.sh
	* configure: Regenerated.
	* GNUmakefile.in: Install gnustep-config.sh in system Tools, which
	is guaranteed to be in PATH.
	
2007-01-25  Nicola Pero  <nicola.pero@meta-innovation.com>

	* Documentation/GNUmakefile: Fixed 'regenerate' target when you
	invoke it without gnustep-make being installed.
	* Documentation/make.texi: Updated to talk about
	GNUSTEP_INSTALLATION_DOMAIN, not GNUSTEP_INSTALLATION_DIR.
	
2007-01-23  Matt Rice  <ratmice@gmail.com>
	
	* rules.make (ALL_CCFLAGS): Fix typo.

2007-01-22  Nicola Pero  <nicola.pero@meta-innovation.com>

	Fixed precompiled headers when -I. is early in the compile command
	line.
	* rules.make (ALL_OBJCFLAGS): Added
	OBJC_PRECOMPILED_HEADERS_INCLUDE_FLAGS at the beginning.
	(ALL_CFLAGS, ALLCCFLAGS, ALL_OBJCCFLAGS): Similar changes.
	* Instance/rules.make: Add the -I commands to find the precompiled
	header to the new C_PRECOMPILED_HEADERS_INCLUDE_FLAGS,
	OBJC_PRECOMPILED_HEADERS_INCLUDE_FLAGS,
	CC_PRECOMPILED_HEADERS_INCLUDE_FLAGS,
	OBJCC_PRECOMPILED_HEADERS_INCLUDE_FLAGS variables instead of
	ADDITIONAL_INCLUDE_DIRS.

2007-01-16  Nicola Pero  <nicola.pero@meta-innovation.com>

	* configure.ac (GS_WITH_PRECOMPILED_HEADERS): Set to 'no'
	when precompiled headers are not available.
	* rules.make: Compare GS_WITH_PRECOMPILED_HEADERS explicitly to
	'yes'.
	* Instance/rules.make: Same change.
	* configure: Regenerated.
	
2007-01-16  Nicola Pero  <nicola.pero@meta-innovation.com>

	* config-precomp-test: New directory
	* config-precomp-test/gs_precomp_test.h,
	config-precomp-test/gs_precomp_test.m,
	config-precomp-test/run-test.sh: New test for ObjC precompiled
	headers to properly detect if they work or not.