@@ -1,4 +1,9 @@
-2007-02-10  Matt Rice <ratmice@gmail.com>
+2007-02-11  Nicola Pero  <nicola.pero@meta-innovation.com>
+
+	* gnustep-config.sh.in (GNUSTEP_MAKEFILES): If we are asked for
+	GNUSTEP_MAKEFILES, print it out and exit.
+
+2007-02-11  Matt Rice <ratmice@gmail.com>
 
 	* gnustep-config.sh.in: exit early for --help.
 
